@@ -1,3 +1,6 @@
+2003-11-01  Tim Waugh  <twaugh@redhat.com>
+	* src/PeopleStore.py: Fixed double-click behaviour (bug #834104).
+
 2003-10-31  Tim Waugh  <twaugh@redhat.com>
 	* src/Makefile.am: Remove DrawDoc.py, TextDoc.py.
 
